<resources>
    <string name="app_name">Class check-in</string>
    <string name="login">登录</string>
    <string name="Login_screen">登录界面</string>
    <string name="enroll_account">注册账号</string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="npassword">确认新密码</string>
    <string name="telephone_number">电话</string>
    <string name="Registration_screen">注册界面</string>
    <string name="share_perferences_file_name">sp_login</string>
    <string name="login_username">请输入用户名</string>
    <string name="login_password">请输入密码</string>
    <string name="new_username">请输入新账号</string>
    <string name="new_password">请输入新密码</string>
    <string name="sign_up">没有账号?点此处注册</string>
    <string name="login_remember_password">login_remember_password</string>
    <string name="remember_password">记住密码</string>
    <string name="MyClass">&#xe600;</string>
    <string name="login_exit">退出登录</string>
    <string name="preservation">保存</string>
    <string name="teacher">教师</string>
    <string name="student">学生</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="me">我的</string>
    <string name="course">课程</string>
    <string name="home">首页</string>
    <string name="sign">签到</string>
    <string name="touXiang">头像</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>