<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.myapplication.Activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@mipmap/ic_userb">

            <!--<ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_baseline_person_pin_24"
                tools:ignore="ContentDescription" />-->
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="48dp">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="1dp"
                android:src="@drawable/ic_baseline_person_outline_24"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/et_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="0dp"
                android:hint="@string/login_username"
                android:inputType="text"
                android:maxLines="1"
                android:textColorHint="#616161"
                tools:ignore="Autofill,TouchTargetSizeCheck" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="3dp"
                android:src="@drawable/ic_outline_lock_24"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="0dp"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColorHint="#616161"
                tools:ignore="Autofill,TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/iv_pwd_switch"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="6dp"
                android:src="@drawable/ic_baseline_visibility_off_24"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp">

            <CheckBox
                android:id="@+id/cb_remember_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="4dp"
                android:checked="false"
                android:text="@string/remember_password"
                android:textColor="#00796B"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/enroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/cb_remember_pwd"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="8dp"
                android:text="@string/sign_up"
                android:textColor="@color/DodgerBlue"
                tools:ignore="RelativeOverlap" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/shap_button"
                android:focusableInTouchMode="false"
                android:text="@string/login"
                android:textColor="@android:color/black"
                android:textSize="24sp" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>